fixed spacing issue for mobiles 2

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -95,6 +95,7 @@
   @include tablet {
     width: 100%;
     flex: none;
+    padding: 1rem;
   }
 }
 
